# django-spaces-members

./: .gitignore  setup.cfg
spaces_members/: __init__.py  apps.py  forms.py  models.py  urls.py  views.py
spaces_members/migrations/: 0001_initial.py
spaces_members/static/spaces_members/js/: searchUser.js
spaces_members/templates/registration/: password_reset_complete.html  password_reset_confirm.html
spaces_members/templates/spaces_members/: base.html  create.html  icon.html  index.html  user_confirm_remove.html
spaces_members/templates/spaces_members/email/: welcome_email.txt  welcome_subject.txt
spaces_members/templates/spaces_members/includes/: add_existing_users.html  form.html  formerrors.html  formfield.html
