[metadata]
name = django_spaces_members
author = Mattes Sarcander
description = Simple app displaying members of current space, intended for Django Collab platform.
version = 0.1
url = https:///github.com/Fortschritt/django-spaces-members
keywords = 
classifiers = 
  Development Status :: 4 - Beta
  Programming Language :: Python :: 3
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.4